Working Infracture on Azure for S2S with onprem vSRX

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Local .terraform directories
 **/.terraform/*
 
+#ssh-keys
+ssh-keys/
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
+terraform.tfvars
 
 # Crash log files
 crash.log
